--- a/scss/header.scss
+++ b/scss/header.scss
@@ -104,6 +104,7 @@
 		}
 		&__nav._active {
 			left: 0;
+			z-index: 2;
 		}
 		&__nav::before {
 			content: "";
